<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CountDown NEIU</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_new_event">New Event</string>
    <string name="event_count_down">Event Count Down</string>
    <string name="title_activity_create_new">Create New Event</string>
    <string name="title_activity_view_event">View Event</string>
    <string name="title">Title</string>
    <string name="btn_pickPhoto">Pick Photo</string>
    <string name="pick_a_date">Pick Date</string>
    <string name="pick_a_time">Pick Time</string>
    <string name="submit">Submit</string>

</resources>
