<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateNewEventActivity" >

    <TextView
        android:id="@+id/item_txtDayLeft_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/item_txtDayLeft_detail"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/item_txtDayLeft_detail"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/pick_a_date" />

    <Button
        android:id="@+id/btn_timePiker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_datePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:visibility="gone"
        android:text="@string/pick_a_time" />

    <Button
        android:id="@+id/btn_photoPiker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_timePiker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/btn_pickPhoto" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_photoPiker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"        
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_datePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:visibility="gone"        
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>